Fixed featured content spacing

--- a/style.css
+++ b/style.css
@@ -2401,7 +2401,7 @@ body.woocommerce-page .upsells.products ul li.product.last {
 ----------------------------------------------- */
 
 #featured-content {
-	margin: 50px auto 10px;
+	margin: 60px auto 0;
 	padding: 0 20px;
 	max-width: 1040px;
 	background: none;
